feat(cache): 为分类和菜品服务添加Spring Cache缓存支持
- 在CategoryServiceImpl中添加@CacheEvict和@Cacheable注解实现缓存管理
- 在DishServiceImpl中添加缓存注解支持菜品数据的缓存操作
- 配置RedisConfig使用GenericJackson2JsonRedisSerializer序列化器
- 添加JacksonBaseConfig统一JSON序列化配置支持Java 8时间类型
- 在SkyServerApplication中启用@EnableCaching注解
- 更新WebMvcConfig使用统一的ObjectMapper实例
- 优化HttpClientUtil使用新的JSON配置工厂方法
- 移除旧的JacksonObjectMapper类并重构相关引用
- 在debug记录中添加缓存相关问题的解决方案和最佳实践